--- a/1-java-api-idtokenhint/src/main/resources/static/styles.css
+++ b/1-java-api-idtokenhint/src/main/resources/static/styles.css
@@ -1,30 +1,28 @@
 body {
-  font-family: sans-serif;
-  background-color: #E0E0E0;
+    font-family: sans-serif;
+    background-color: #E0E0E0;
 }
-
 #wrap {
-  margin: 0 auto;
-  width: 800px;
+    margin: 0 auto;
+    width: 800px;
 }
 
 .button {
-  background-color: #3B2E58;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 8px;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: bold;
-}
+    background-color: #3B2E58;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+  }
 
 .dark-purple-fill {
   background-color: #3B2E58;
 }
-
 .light-purple-fill {
   background-color: #8661c5;
 }
@@ -54,7 +52,7 @@ body {
   text-align: center;
 }
 
-#qrcode>img {
+#qrcode > img {
   margin: 0 auto;
   padding-top: 25px;
 }
@@ -86,32 +84,40 @@ body {
 .green {
   color: #228B22;
 }
-
+/*
 #message {
   font-size: 1.5em;
+}
+*/
+#subject {
+    font-size: 1.5em;
 }
 
 /*------*/
 
 table {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
 
 table td, table th {
-  border: 1px solid #ddd;
-  padding: 8px;
+    border: 1px solid #ddd;
+    padding: 8px;
 }
 
-table tr:nth-child(even){background-color: #f2f2f2;}
+table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
 
-table tr:hover {background-color: #ddd;}
+table tr:hover {
+    background-color: #ddd;
+}
 
 table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #0f0f0f;
-  color: white;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #0f0f0f;
+    color: white;
 }
